# dotish-ai-log-analyzer

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  main.py
app/ai/: __init__.py  llm_client.py
app/ai/prompts/: extraction_prompt.txt  fixes_prompt.txt
app/api/: analysis.py  logs.py
app/db/: __init__.py
app/detectors/: __init__.py
app/integrations/: __init__.py
app/models/: __init__.py  analysis_result.py  log_event.py
app/parsers/: __init__.py  base_parser.py  docker_parser.py  nginx_parser.py  syslog_parser.py
app/services/: __init__.py  analysis_service.py  parsing_service.py  report_service.py
app/static/: index.html
app/workers/: __init__.py
deployment/aws/: architecture.md  ec2-deploy.md  systemd.service
deployment/docker/: Dockerfile  docker-compose.yml
deployment/nginx/: default.conf
docs/: api.md  architecture.md  deployment.md  evaluation.md  roadmap.md
scripts/: init_db.py  run_local.py  seed_sample_logs.py
tests/: __init__.py  test_api.py  test_parsers.py  test_services.py
